# lnx_proj_1

./: Makefile.am  README.md  configure.ac  func.c  header.h  main.c
